package(default_visibility = ["//visibility:private"])

load(":toolchain.bzl", "helm_toolchain")

toolchain_type(name = "toolchain_type")

helm_toolchain(
    name = "helm_linux",
    tool = "@helm//:allfiles",
    visibility = ["//visibility:public"],
)

helm_toolchain(
    name = "helm_darwin",
    tool = "@helm_osx//:allfiles",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "helm_linux_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":helm_linux",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "helm_osx_toolchain",
    target_compatible_with = [
        "@bazel_tools//platforms:osx",
    ],
    toolchain = ":helm_darwin",
    toolchain_type = ":toolchain_type",
)
