package(default_visibility = ["//visibility:private"])

load(":toolchain.bzl", "jq_toolchain")

toolchain_type(name = "toolchain_type")

jq_toolchain(
    name = "jq_linux",
    tool = "@jq_linux//file",
    visibility = ["//visibility:public"],
)

jq_toolchain(
    name = "jq_osx",
    tool = "@jq_osx//file",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "jq_linux_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":jq_linux",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "jq_osx_toolchain",
    target_compatible_with = [
        "@bazel_tools//platforms:osx",
    ],
    toolchain = ":jq_osx",
    toolchain_type = ":toolchain_type",
)
